--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 .navbar{
     background-color: #D9D9D9;
 }
@@ -21,19 +22,26 @@
 .search_input{
     border: none;
     border-radius: 30px;
-    outline:none;
+    width: 100%;
+    padding-left: 10px;
+}
+.search_input:focus{
+    outline: none;
 }
 .icon_nav_cart{
     margin-right: 20px;
 }
-.fa-cart-shopping, .fa-user {
-    color: #264653; 
-    font-size: 30px;
+.icon_nav_cart .bi-cart,.bi-person-circle{
+    color: #264653;
+    font-size: 36px;
 }
-.fa-cart-shopping:hover, .fa-user:hover {
-    color:#F4A261; 
+.icon_nav_cart .bi-cart:hover,.bi-person-circle:hover{
+    color:#F4A261;
+  
+}
 
-}
+
+
 
 
 
