--- a/style.css
+++ b/style.css
@@ -44,13 +44,14 @@
 .icon_nav_cart::after{
     position: absolute;
     content:"1";    
-    top: 5px;
+    top: 10px;
     left: 35px;
     color: #264653;
     font-weight: bold;
     background-color: #F4A261;
     border-radius: 50%;
     padding: 0 5px;
+    font-size: 12px;
 }
 
 
