--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+/* import font boostrap */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+/* Navbar */
+header{
+    margin-bottom: 100px;
+}
 .navbar{
     background-color: #D9D9D9;
 }
-.nav_left{
+.nav_left a{
+    display: block;
     background-color: #264653;
     width: 50px;
     height: 50px;
@@ -37,6 +43,7 @@
 }
 .icon_nav_cart .bi-cart:hover,.bi-person-circle:hover{
     color:#F4A261;
+  
 }
 .icon_nav_cart{
     position: relative;
@@ -50,10 +57,43 @@
     font-weight: bold;
     background-color: #F4A261;
     border-radius: 50%;
-    padding: 0 5px;
+    padding: 0 5px ;
     font-size: 12px;
 }
-
+/* End navbar */
+/* Category */
+   
+    .nav-tabs .nav-link{
+        border-radius: 0;
+    }
+    .card_category{
+        max-width: 250px;
+        margin: 0 20px 20px 20px;
+        padding: 0;
+        position: relative;
+        box-shadow: 15px 5px 10px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+    }
+    .card_body{
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        translate: -50%;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.4)), rgba(255, 255, 255, 0.4);
+        width: 100%;
+    }
+    .card-price{
+        color:#09276a;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .card-img-top{
+        max-height: 300px;
+    }
+/* End Category */
 
 
 
